--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <script src="script.js"></script>
         <link rel="stylesheet" href="style.css">
-        <title>La pagina de Carlos Sanchez</title>
+        <title>Web App – Simple Interest Calculator</title>
     </head>
     <body>
         <div class="maindiv">
